--- a/alle/Makefile
+++ b/alle/Makefile
@@ -150,6 +150,6 @@ test:
 
 
 clean:
-	rm -rf dato.sgml magic.sgml $(targetname)-* DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tgz $(targetname)*.pdf $(targetname)*.ps.gz $(targetname)*.zip $(targetname)-*.palm.tgz $(targetname)-*.png.tgz $(targetname)-*.sgml.tgz $(targetname)-*.html-ub.tgz palm/*.prc palm/*.pdb sideantal.txt
+	rm -rf dato.sgml magic.sgml $(targetname)-* DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)* palm/*.prc palm/*.pdb sideantal.txt
 
 
