--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,6 +70,7 @@ htmlfiler:
 reparerhtml:
 	(cd bog;perl ../../misc/insertimagesize)	
 	(cd bog;tidy -f err.txt -imu *html;rm -f err.txt)
+	(cd bog;ln -sf *apprevhist.html apprevhist.html)
 
 
 pakhtml:
