--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -109,6 +109,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% /usr/X11R6/bin/convert -antialias images/%.png eps2:bogps/%.eps
 	echo '<!ENTITY magic "eps">' > magic.sgml
 	cp *.sgml bogps
+	(cd bogps; perl ../../httpsplit.pl *.sgml)
 	(cd bogps; db2ps bog.sgml )
 	mv bogps/bog.ps $(targetname)-$(version).ps
 	rm -f $(targetname)-*.ps.gz
@@ -121,6 +122,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	cp *.sgml bogpdf
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
+	(cd bogpdf; perl ../../httpsplit.pl *.sgml)
 	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
